JDK 11 & 2-stage Docker build